--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "native-base": "^2.8.1",
     "react": "16.6.0-alpha.8af6728",
     "react-native": "0.57.4",
+    "react-native-circular-progress": "^1.0.1",
+    "react-native-easy-grid": "^0.2.0",
     "react-native-router-flux": "^4.0.5",
+    "react-native-svg": "^8.0.8",
     "react-native-vector-icons": "^6.0.2",
     "react-redux": "^5.1.0",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
